Commit to coorect degree problem.

--- a/2_LSIRM_2018.rmd
+++ b/2_LSIRM_2018.rmd
@@ -2,10 +2,12 @@
 title: "LSIRM 2018 - Introduction to R"
 author: "Simon Kiss"
 date: '2018-06-19'
-output: html_document: 
+output: 
+  html_document:
     toc: true
     toc_float: true
     code_folding: hide
+
 
 ---
 
@@ -143,7 +145,7 @@ ces$education<-Recode(as.numeric(ces$education), "12:1000=NA")
 #check vals
 vals
 #Recode eduation to degree
-ces$degree<-car::Recode(ces$education, "1:7='No degree' ; 8:11='Degree'", levels=c('no degree', 'degree'), as.factor=T)
+ces$degree<-car::Recode(ces$education, "1:7='No degree' ; 8:11='Degree'", levels=c('No degree', 'Degree'), as.factor=T)
 
 #Income missing values
 vals$income
